[package]
name = "colored_2d_mesh_renderer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = ["render", "bevy_asset"]

[dev-dependencies]
bevy = "0.9.1"